--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,10 +83,43 @@ img {
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
+.container {
+  max-width: 1200px;
+  margin-inline: auto;
+  padding-inline: 1rem;
+}
 
 /*=============== STYLE SWITCHER ===============*/
 
 /*=============== HEADER & NAV ===============*/
+.header {
+  position: fixed;
+  background-color: var(--container-color);
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 3px 9px hsla(0, 0, 0, 0.05);
+}
+
+.nav,
+.nav__list {
+  display: flex;
+}
+
+.nav {
+  height: calc(var(--header-height) + 2.25rem);
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+  color: var(--first-color);
+  font-size: var(--h2-font-size);
+}
+
+.nav__list {
+  column-gap: 1.5rem;
+}
 
 /* Active link */
 
