--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,6 +89,11 @@ img {
   padding-inline: 1rem;
 }
 
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
 /*=============== STYLE SWITCHER ===============*/
 
 /*=============== HEADER & NAV ===============*/
@@ -97,6 +102,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  background-color: var(--body-color);
   box-shadow: 0 3px 9px hsla(0, 0, 0, 0.05);
 }
 
@@ -132,9 +138,25 @@ img {
 }
 
 /*=============== HOME ===============*/
+.home {
+  background-color: var(--container-color);
+  padding-block: 9rem 3rem;
+}
+
 .home__container {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+}
+
+.home__samll {
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-600);
+  letter-spacing: 1px;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  line-height: 1.4;
 }
 
 /* Home animation */
