--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,11 +159,82 @@ img {
   line-height: 1.4;
 }
 
+.home__title span {
+  font-weight: var(--weight-300);
+}
+
+.home__description {
+  margin-block: 1.5rem 3rem;
+}
+
+.home__btns {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.home__img-wrapper {
+  margin-inline: auto 2rem;
+  position: relative;
+}
+
+.home__img-wrapper::before,
+.home__img-wrapper::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+}
+
+.home__img-wrapper::before {
+  background-color: var(--first-color-light);
+  animation: animate__before 8s ease-in-out infinite;
+}
+
+.home__img-wrapper::after {
+  background-color: var(--first-color);
+}
+
+.home__img-wrapper::after,
+.home__img {
+  animation: animate__after 8s ease-in-out infinite;
+}
+
+.home__img {
+  z-index: 10;
+  position: relative;
+  vertical-align: middle;
+}
+
 /* Home animation */
+@keyframes animate__before {
+  
+}
 
 /*=============== BUTTON ===============*/
+.btn {
+  display: inline-block;
+  background-color: var(--first-color);
+  border: 1px solid var(--first-color);
+  color: var(--white);
+  padding: 0.9rem 2.5rem;
+  font-size: var(--large-font-size);
+  border-radius: 0.5rem;
+  transition: all 0.5s ease;
+}
+
+.btn--transparent {
+  background-color: transparent;
+  color: var(--first-color);
+}
 
 /* Button hover */
+.btn:hover {
+  background-color: var(--first-color-dark);
+}
+
+.btn--transparent:hover {
+  background-color: var(--first-color);
+  color: var(--white);
+}
 
 /*=============== ABOUT ===============*/
 
